# plumbrC

./: .clangd  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compile_commands.json  install.sh  nginx.conf  start.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  publish-pypi.yml
docs/: index.html
examples/c/: example.c
examples/python/: example.py
include/: aho_corasick.h  arena.h  config.h  hwdetect.h  io.h  libplumbr.h  parallel.h  patterns.h  plumbr.h  redactor.h  thread_pool.h
integrations/: README.md
integrations/docker/: Dockerfile  docker-compose.yml
patterns/: README.md  all.txt  default.txt
proto/: plumbr.proto
python/: MANIFEST.in  README.md  generate_proto.sh  pyproject.toml  setup.py
python/plumbrc/: __init__.py  _plumbr.py  exceptions.py  grpc_client.py
python/plumbrc/proto/: __init__.py  plumbr_pb2.py  plumbr_pb2.pyi  plumbr_pb2_grpc.py
python/tests/: test_basic.py  test_patterns.py  test_performance.py
src/: aho_corasick.c  arena.c  grpc_server.cc  hwdetect.c  io.c  libplumbr.c  main.c  parallel.c  patterns.c  pipeline.c  redactor.c  server.c  thread_pool.c
tests/: bench_api.py  bench_full.sh  bench_grpc.py  bench_lines.py  benchmark.c  fuzz_http.c  fuzz_json.c  fuzz_redactor.c  profile_phases.c  realworld_logs.txt  test_io.c  test_libplumbr.c  test_patterns.c  test_plumbr_api.py  test_redactor.c  test_security.c  test_server.sh
web/: package-lock.json  package.json
(+85 files in other folders)
