[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plumbrc"
version = "1.0.0"
description = "High-performance log redaction for Python - Python wrapper for PlumbrC"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Source Available License"}
authors = [
    {name = "PlumbrC Team", email = "contact@plumbr.ca"}
]
keywords = ["security", "redaction", "secrets", "logs", "privacy", "pii"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://plumbr.ca"
Documentation = "https://plumbr.ca"
Repository = "https://github.com/AmritRai1234/plumbrC"
Issues = "https://github.com/AmritRai1234/plumbrC/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["plumbrc"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
plumbrc = ["py.typed", "lib/*.so"]
